# wenv

./: Cargo.toml  README.md  WindowsEnv.sln
WindowsEnv/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  Package.appxmanifest  WindowsEnv.csproj  app.manifest
WindowsEnv/Properties/: launchSettings.json
src/: main.rs
