[package]
name = "wenv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.6", features = ["derive"] }
owo-colors = "3.5.0"
tabwriter = "1.3.0"
term_size = "0.3.2"
winreg = "0.51.0"
