[package]
name = "wenv-cli"
author = "LeoDog896 <leodog896@gmail.com>"
description = "The Missing Windows Environment Variable Manager"
license = "MIT OR Apache-2.0"
repository = "https://github.com/LeoDog896/wenv"
keywords = ["windows", "environment", "manager", "cli", "env"]
categories = ["command-line-utilities"]
version = "0.1.0"
edition = "2021"

[[bin]]
name = "wenv"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.75"
atty = "0.2.14"
clap = { version = "4.4.6", features = ["derive"] }
owo-colors = "3.5.0"
tabwriter = "1.3.0"
term_size = "0.3.2"
winreg = "0.51.0"
